# basti

./: .dockerignore  .earthlyignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  README.md  bastid.Dockerfile  cluster.py  etcd.Dockerfile  inventory.toml  x.py
.cargo/: config.toml
.github/workflows/: container.yml  images.yml
basti-cli/: Cargo.toml
basti-cli/src/: client.rs  list.rs  main.rs  submit.rs
basti-client/: Cargo.toml
basti-client/src/: client.rs  commands.rs  list.rs  main.rs  submit.rs  table.rs  util.rs
basti-common/: Cargo.toml
basti-common/src/: lib.rs  payload.rs  pointer.rs  priority.rs  task.rs
basti-daemon/: Cargo.toml
basti-daemon/src/: api.rs  api_error.rs  client.rs  main.rs  ops.rs  worker.rs
basti-daemon/src/api/: endpoints.rs  errors.rs  mod.rs
basti-daemon/src/ops/: create.rs  delete.rs  errors.rs  mod.rs  pointer_based.rs  read.rs  revision_based.rs  simple.rs  update.rs
basti-daemon/src/ops/old/: revision_based.rs
basti-task/: Cargo.toml
basti-task/src/: key.rs  lib.rs  priority.rs  value.rs
basti-types/: Cargo.toml
basti-types/src/: lib.rs  name.rs  task.rs
docker/: bastid.Dockerfile  etcd.Dockerfile  pi-1.yml  pi-2.yml  pi-3.yml
examples/: README.md
examples/gateway/: compose.yml  haproxy.cfg
examples/pi-cluster/: compose.pi-1.yml  compose.pi-2.yml  compose.pi-3.yml
examples/scale/: compose.yml
examples/single-node/: compose.yml
tools/: .gitignore  cluster.py  inventory.example.toml  x.py
