[workspace]
members = ["basti-client", "basti-common", "basti-daemon"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"
async-channel = "2.2.0"
axum = "0.7.4"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
etcd-client = "0.12.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = "0.15.0"
tokio = { version = "1.36.0", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
lto = true
