[workspace]
members = ["basti-client", "basti-daemon", "basti-task"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
