[package]
name = "basti-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastictl"
path = "src/main.rs"

[dependencies]
basti-common = { path = "../basti-common" }
clap = { workspace = true }
reqwest = { workspace = true, default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
