[package]
name = "basti-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastictl"
path = "src/main.rs"

[dependencies]
basti-common = { path = "../basti-common" }
clap = { workspace = true, features = ["env"] }
colored.workspace = true
reqwest.workspace = true
tabled.workspace = true
tokio.workspace = true
url.workspace = true
