[package]
name = "basti-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastictl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
basti-task = { path = "../basti-task" }
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
colored.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
tabled.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
