[package]
name = "basti-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastictl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
basti-task = { path = "../basti-task" }
chrono.workspace = true
clap.workspace = true
colored = "2.1.0"
futures.workspace = true
reqwest = { version = "0.11.24", features = ["json"] }
serde.workspace = true
tabled = "0.15.0"
tokio.workspace = true
url.workspace = true
uuid.workspace = true
