[package]
name = "basti-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastid"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
axum.workspace = true
basti-task = { path = "../basti-task" }
bson.workspace = true
chrono.workspace = true
clap.workspace = true
etcd-client.workspace = true
futures.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
