[package]
name = "basti-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastid"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-channel = "2.2.0"
axum = "0.7.4"
basti-task = { path = "../basti-task" }
bson = "2.9.0"
chrono.workspace = true
clap.workspace = true
etcd-client = "0.12.4"
futures.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url.workspace = true
uuid.workspace = true
