[package]
name = "basti-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bastid"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-channel = "2.2.0"
axum = { version = "0.7.4", features = ["http2"] }
basti-types = { path = "../basti-types" }
bson = "2.9.0"
chrono.workspace = true
clap.workspace = true
etcd-client = "0.12.4"
futures.workspace = true
hostname = "0.4.0"
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
url.workspace = true
uuid.workspace = true
